<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Horoscope</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- nav drawer string -->
    <string name="drawer_open">Menu Open</string>
    <string name="drawer_close">Menu Close</string>
    <string name="drawer_title">Horoscopes</string>

    <!-- nav drawer menu items -->
    <string-array name="nav_drawer_items">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>

    <!-- drawer item icons -->
    <string-array name="nav_drawer_icons">
        <item>@drawable/aries</item>
        <item>@drawable/taurus</item>
        <item>@drawable/gemini</item>
        <item>@drawable/cancer</item>
        <item>@drawable/leo</item>
        <item>@drawable/virgo</item>
        <item>@drawable/libra</item>
        <item>@drawable/scorpio</item>
        <item>@drawable/sagittarius</item>
        <item>@drawable/capricorn</item>
        <item>@drawable/aquarius</item>
        <item>@drawable/pisces</item>
    </string-array>

    <!-- img content desc -->
    <string name="img_content_desc">Image</string>

    <!--view horoscope frag-->
    <string name="scope_no_net">Unable to connect to internet.\nPlease check your connection and try again.</string>
    <string name="action_datepicker">Pick Date</string>
    <string name="action_share">Share</string>
    <string name="vwh_date_lbl">Date</string>
    <string name="vwh_date_txt">Friday, 21 March, 2014</string>
    <string name="vwh_horoscope_lbl">Aries</string>
    <string name="vwh_bday_lbl">March 21 - April 19</string>
    <string name="vwh_horoscope_txt">Life exceeds your dreams later today. At the moment there`s no difference between who you are and what you want. Luckily for you, intense desires are likely to be fulfilled. The question is whether you`ll be satisfied or if you`ll still want more. Resist the temptation to be greedier than is necessary. If you have the world, don`t ask for the Universe. Try spreading a bit of your wealth around, Taurus.</string>
    <string name="btn_read_more_lbl">Read More</string>
    <string name="disclaimer">Horoscopes provided by www.findyourfate.com</string>

</resources>
